# data-model-management-platform

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  config.ini  docker-compose.yml  environment.yml  objective_n_plan_1st.md  objective_n_plan_3rd.md  objective_n_plan_5th.md  objective_n_plan_6th.md  objective_n_plan_7th.md
backend/: Dockerfile  alembic.ini  pyproject.toml  run_pipeline_yaml.py
backend/app/: main.py
backend/app/core/: config.py  database.py  storage.py
backend/app/manipulators/: __init__.py  format_convert.py
backend/app/models/: all_models.py  events.py
backend/app/pipeline/: __init__.py  dag_executor.py  executor.py  image_executor.py  image_materializer.py  manipulator.py  manipulator_base.py  models.py  pipeline_data_models.py
backend/app/schemas/: __init__.py  dataset.py  filebrowser.py  pipeline.py
backend/app/services/: __init__.py  dataset_service.py  pipeline_automation_service.py  pipeline_service.py  training_executor.py
backend/app/tasks/: celery_app.py  eda_tasks.py  pipeline_tasks.py  register_classification_tasks.py  register_tasks.py
backend/lib/: __init__.py
backend/lib/classification/: __init__.py  ingest.py
backend/lib/manipulators/: __init__.py  cls_add_head.py  cls_crop_image.py  cls_demote_head_to_single_label.py  cls_filter_by_class.py  cls_merge_classes.py  cls_merge_datasets.py  cls_remove_images_without_label.py  cls_rename_class.py  cls_rename_head.py  cls_reorder_classes.py  cls_reorder_heads.py  cls_rotate_image.py  cls_sample_n_images.py  cls_select_heads.py  cls_set_head_labels_for_all_images.py  det_filter_keep_images_containing_class_name.py  det_filter_remain_selected_class_names_only_in_annotation.py  det_filter_remove_images_containing_class_name.py  det_format_convert.py  det_mask_region_by_class.py  det_merge_datasets.py  det_remap_class_name.py  det_rotate_image.py  det_sample_n_images.py  filter_by_class_classification.py  filter_by_classification_class.py  filter_final_classes.py  filter_keep_images_containing_class_name.py  filter_remain_selected_class_names_only_in_annotation.py  filter_remove_images_containing_class_name.py  format_convert.py  mask_region_by_class.py  merge_classes_classification.py  merge_classification_classes.py  merge_datasets.py  merge_datasets_classification.py  remap_class_name.py  remove_images_without_classification_label.py  remove_images_without_label_classification.py  (+13 more)
backend/lib/pipeline/: cls_merge_compat.py  config.py  dag_executor.py  executor.py  image_executor.py  image_materializer.py  manipulator.py  manipulator_base.py  pipeline_data_models.py  pipeline_validator.py  (+3 more)
backend/migrations/: env.py
backend/pipelines/: coco8_conv_coco.yaml  merge_coco8_val.yaml
backend/tests/: conftest.py  convert_real_data.py  convert_with_yaml_roundtrip.py  test_class_mapping.py  test_classification_ingest.py  test_cls_add_head.py  test_cls_crop_image.py  test_cls_demote_head_to_single_label.py  test_cls_filter_by_class.py  test_cls_merge_classes.py  test_cls_merge_datasets.py  test_cls_rotate_image.py  test_cls_sample_n_images.py  test_cls_set_head_labels_for_all_images.py  test_coco_io.py  test_dag_executor_merge.py  test_format_convert.py  test_merge_datasets.py  test_pipeline_cli.py  test_pipeline_config.py  test_pipeline_validator.py  test_real_data_roundtrip.py  test_yolo_io.py  test_yolo_yaml.py
(+202 files in other folders)
